--- a/style.css
+++ b/style.css
@@ -165,3 +165,30 @@ code.image {
     width: 90%;
   }
 }
+
+#country-select {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #64b96b;
+  border-radius: 4px;
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+  background-color: #171717;
+  color: white;
+}
+
+#country-select:focus {
+  border-color: #64b96b;
+  outline: none;
+}
+
+#country-select option {
+  background-color: #171717;
+  color: white;
+}
+
+#country-select option:hover {
+  background-color: #64b96b;
+  color: black;
+}
