--- a/style.css
+++ b/style.css
@@ -109,15 +109,15 @@ code.image {
 
 #min {
   background-color: #00823f;
-  border-top-left-radius: 4px; /* Rounded top-left corner */
-  border-bottom-left-radius: 4px; /* Rounded bottom-left corner */
+  border-top-left-radius: 4px; 
+  border-bottom-left-radius: 4px; 
   text-align: left;
   padding-left: 10px;
 }
 #max {
   background-color: #e73c09;
-  border-top-right-radius: 4px; /* Rounded top-right corner */
-  border-bottom-right-radius: 4px; /* Rounded bottom-right corner */
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px; 
   text-align: right;
   padding-right: 10px;
 }
